tests/paczka1/small_fuzzy/89196631.err
Error in line 1: sCGaSce S832 13,3
Error in line 2: I3JhHp4d A639 77,0
Error in line 7: xjXyGc6mzBS A964 49,8
Error in line 5: I3JhHp4d S832 16,7
Error in line 9: I3JhHp4d A964 45,1
